katars/tests/snaps/snapshots/snap_errors__unsafe_required.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"std.mem.alloc(4)\")"
---
Error: intrinsic 'alloc' can only be called inside an unsafe block
   ╭─[<test>:1:1]
   │
 1 │ std.mem.alloc(4)
   │ ────────┬───────  
   │         ╰───────── intrinsic 'alloc' can only be called inside an unsafe block
   │ 
   │ Help: wrap the call in an unsafe { ... } block
───╯
